--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="placeholder">PlaceHolder</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="save_profile">Save Profile</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
